@@ -1,19 +1,19 @@
 Package: Rmpfr
 Type: Package
 Title: R MPFR - Multiple Precision Floating-Point Reliable
-Version: 0.3-0
-Date: 2011-05-11
+Version: 0.4-0
+Date: 2011-07-22
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Depends: methods, R (>= 2.11.0)
 SystemRequirements: MPFR (MP Floating-Point Reliable Library, http://mpfr.org/)
   and GMP (GNU Multiple Precision library, http://gmplib.org/), see README
+Suggests: polynom
+SuggestNotes: 'polynom' is only needed for vignette
 Description: Rmpfr provides S4 classes and methods for
   arithmetic including transcendental ("special") functions for
   arbitrary precision floating point numbers. To this end, it interfaces to
   the LGPL'ed MPFR (Multiple Precision Floating-Point Reliable) Library
   which itself is based on the GMP (GNU Multiple Precision) Library.
 License: GPL (>= 2)
-NoNamespace: There is currently no NAMESPACE, as I want one package with
-  heavy use of S4 methods and classes and no namespace.  This may well change.
 
