@@ -31,3 +31,19 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+
+
+@manual{FousseHLPZ-MPFR:2011,
+ author = {Fousse, Laurent and Hanrot, Guillaume and Lef\`{e}vre, Vincent and P\'{e}lissier, Patrick and Zimmermann, Paul},
+ year = 2011,
+ title = {MPFR: A multiple-precision binary floating-point library with correct rounding},
+ url = {http://mpfr.org/},
+}
+
+@manual{GMP:2011,
+ author = {Torbjörn Granlund and the GMP development team},
+ year = 2011,
+ title = {GNU MP - The GNU Multiple Precision Arithmetic Library},
+ url = {http://gmplib.org/},
+}
