@@ -1,5 +1,5 @@
 
-R version 2.13.0 Patched (2011-05-11 r55852)
+R version 2.13.1 Patched (2011-07-20 r56456)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -35,11 +35,11 @@ The following object(s) are masked from 'package:base':
 > 
 > .limbs <- function(x) {
 +     stopifnot(is(x, "mpfr"))
-+     lapply(x, slot, "d") # not sapply() each can have different prec. & #{limbs}
++     lapply(x@.Data, slot, "d") # not sapply() each can have different prec. & #{limbs}
 + }
 > .expo <- function(x) {
 +     stopifnot(is(x, "mpfr"))
-+     sapply(x, slot, "exp")
++     sapply(x@.Data, slot, "exp")
 + }
 > 
 > Bits <- function(x) {
@@ -177,7 +177,7 @@ c(3217, 205887, 3294199, 105414357, 3373259426, 107944301636,
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  1.316 0.045 1.419 0 0 
+Time elapsed:  1.322 0.047 1.426 0 0 
 > 
 > if(!interactive()) warnings()
 NULL
